--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 8080;
-    server_name  _; 
+    server_name  testproxy.redhat.com; 
 
     location / {
         proxy_pass http://conn-counter:8080;
