--- a/default.conf
+++ b/default.conf
@@ -3,7 +3,7 @@ server {
     server_name  testproxy.redhat.com; 
 
     location / {
-        proxy_pass http://conn-counter:8080;
+        proxy_pass http://conn-counter.backend:8080;
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
